# news-summary-app

./: .gitignore  Makefile  QUICKSTART.md  README.md  USAGE_GUIDE.md  agent_cli.py  agent_run.py  create_service.py  docker-compose.mistral.yml  install-pgvector.sh  main.py  modular_news_summary_system.txt  pyproject.toml  requirements.txt  scheduler.py  setup.sh  test_limited_articles.py  test_mistral.py  test_mistral_retry.py  test_single_article.py  test_telegram_categories.py
.github/workflows/: fetch-news.yml
agent/: __init__.py  command_parser.py  dispatcher.py  llm_client.py  mcp.py  monitor.py  provider_factory.py
agent/templates/: api_provider.py.template  rss_provider.py.template  scraper_provider.py.template
config/: database.json  interfaces.json  llm.json  processors.json  providers.json
core/: db_utils.py  runner.py  scheduler.py  utils.py
data/logs/: .gitkeep
data/vectors/: .gitkeep
interfaces/: base_interface.py  email.py  telegram.py  telegram_command.py
processors/: base_processor.py  groq_summary.py  mistral_summary.py  openai_summary.py
providers/: aljazeera.py  base_provider.py  bbc-sport.py  bbc.py  channel14.py  foxnews.py  guardian.py  guardian_world.py  nyt.py  one.py  walla.py  yahoofinance.py  ynet.py
scripts/: add_provider.py
